--- a/client/templates/jobs/PsychoKiller.jade
+++ b/client/templates/jobs/PsychoKiller.jade
@@ -2,7 +2,7 @@ section.jobmanual
   h1 变态杀人狂
   p 「牢獄の悪夢」中存在的职业。狂人的一种。
   h2 特殊能力
-  p 被变态杀人狂选为对象的参加者会死亡。
+  p 针对变态杀人狂使用能力的参加者会死亡（包括但不限于人狼、占卜师）。
   h2 胜利条件
   p 人狼阵营的胜利
 
