--- a/manual/login.jade
+++ b/manual/login.jade
@@ -1,14 +1,14 @@
 section.manual
   p: a(href="/manual") 返回
-  h1 ログインについて
-  p この月下人狼で人狼をプレイするには<b>ユーザー登録</b>が必要です。
-  p ユーザー登録制によって安全性の向上、<strong>称号</strong>の管理などを実現しています。
-  p ユーザー登録に必要な情報は<b>ユーザーID</b>と<b>密码</b>のみです。
+  h1 关于登录
+  p 要参与本月下人狼服务器的游戏，需要您<b>注册账号</b>。
+  p 注册账号之后能够提升游戏的安全性，并且便于管理<strong>称号</strong>系统（称号系统由于某些未知的原因暂时未能正常工作）。
+  p 用户必须使用<b>账号</b>与<b>密码</b>进行登录。
   
-  h2 既にユーザー登録してある場合
-  p 「ログイン」フォームにユーザーIDと密码を入力してログインし、部屋に参加しましょう。
+  h2 如果您已经注册
+  p 请在「登录」表单中输入您的账号和密码，以加入游戏。
   
-  h2 まだユーザー登録していない場合
-  p 登録は即座に终了し、すぐに人狼を楽しむことができます。
-  p 「新規登録」フォームに、自分でユーザーIDと密码を決めて入力し、新規登録しましょう。ユーザーIDは半角英数字のみで、後から変更できないので注意しましょう。
-  p その後ユーザー名と头像（任意）を設定すれば登録が完了して参加できるようになります。
+  h2 如果您尚未注册
+  p 立刻完成注册，您即可加入游戏享受「月下人狼」的乐趣。
+  p 请在「注册」表单中输入您想要使用的账号、密码，进行注册。账号只能使用半角英数字，一旦注册成功，账号将不能改变。
+  p 然后设定一个昵称与头像（头像是可选的），即可完成注册加入游戏。
