--- a/client/templates/jobs/Trapper.jade
+++ b/client/templates/jobs/Trapper.jade
@@ -5,7 +5,7 @@ section.jobmanual
   p 夜晚在村人门前埋下陷阱，保护村人免受人狼伤害。
   p 门前被埋下陷阱的人遭到人狼袭击的时候，代替这个人，将有一名人狼死去。
   p 但是，如果一个人同时被陷阱师和猎人守护的时候，猎人将触发陷阱死去。同时陷阱师和猎人都不能保护这个人免受人狼侵害。
-  p 不能连续两天守护同一个人。
+  p 不能连续两天守护同一个人，第一天夜里不能进行守护。
   p 没有选择对象的情况下则会猝死，这一点请务必注意。
   h2 胜利条件
   p 村人阵营的胜利
