--- a/client/templates/jobs/Tanner.jade
+++ b/client/templates/jobs/Tanner.jade
@@ -4,6 +4,6 @@ section.jobmanual
   h2 特殊能力
   p 没有什么特别的。
   h2 胜利条件
-  p 终了时如果已经死亡，即可以胜利阵营一同享受胜利。
-  p 但是，如果猝死了，将会败北。
+  p 终了时已经死亡（被袭击或被处刑）。
+  p 如果因为强行退出导致猝死，将直接败北。
 
