--- a/client/templates/game/game.jade
+++ b/client/templates/game/game.jade
@@ -260,8 +260,8 @@
         input(type="submit",value="寄送",data-job="Bomber")
     #form_Blasphemy(hidden).jobformarea
       p
-        | 请选择要冒渎的人:
-        input(type="submit",value="冒渎",data-job="Blasphemy")
+        | 请选择要亵渎的人:
+        input(type="submit",value="亵渎",data-job="Blasphemy")
     #form_Ushinotokimairi(hidden).jobformarea
       p
         | 请选择要诅咒的人:
