--- a/client/templates/jobs/QueenSpectator.jade
+++ b/client/templates/jobs/QueenSpectator.jade
@@ -3,6 +3,7 @@ section.jobmanual
   p 桃栗配置中的特殊职业。把握着村子的命运。
   h2 特殊能力
   p 村民全体，能够知道谁是女王观战者。
+  p 狂人不会知道。
   p 女王观战者死亡的时候，所有人类玩家将会陪葬。
   h2 胜利条件
   p 村人阵营的胜利。
