--- a/client/templates/jobs/ToughGuy.jade
+++ b/client/templates/jobs/ToughGuy.jade
@@ -2,7 +2,7 @@ section.jobmanual
   h1 硬汉
   p 「究极人狼」中存在的职业。不屈的村人。
   h2 特殊能力
-  p 夜里被人狼袭击之后，能够坚持一天才死去。
+  p 夜里被人狼袭击之后，能够坚持到第二天夜里才死去。
   h2 胜利条件
   p 村人阵营的胜利
 
