--- a/manual/changelog.jade
+++ b/manual/changelog.jade
@@ -12,7 +12,7 @@ section.manual
     li.change 冒涜者が一部の役職を冒涜した場合に、冒涜相手ではなく自分が狐憑きとなるように変更しました。(0578740)
   h2 v1.10.2(08775a1;2015-07-21)
   ul
-    li.new 新役職「冒渎者」「丑刻参」を追加しました。(50cc506)
+    li.new 新役職「亵渎者」「丑刻参」を追加しました。(50cc506)
     li.change 黑暗火锅のとき、替身君が求爱者になれるように変更しました。また、替身君が求爱者になった場合求愛しないように変更しました。また、2日目以降に求爱者に変化した場合求愛できるように変更しました。(50cc506)
   h2 v1.10.1-9(2015-07-01)
   ul
