prize norevivebutton improve translation fix

--- a/client/templates/jobs/Spellcaster.jade
+++ b/client/templates/jobs/Spellcaster.jade
@@ -4,6 +4,7 @@ section.jobmanual
   h2 特殊能力
   p 夜晚选择一个人进行诅咒，这个人在第二天白天将无法说话。同一个人不能重复选择。
   p 这个能力不是强制的，可以不发动。
+  p 第一夜不能发动。
   h2 胜利条件
   p 村人阵营的胜利。
 
