--- a/client/templates/jobs/Ushinotokimairi.jade
+++ b/client/templates/jobs/Ushinotokimairi.jade
@@ -4,7 +4,7 @@ section.jobmanual
   h2 特殊能力
   p 每个晚上，可以选择一个人对其进行诅咒。
   p 被诅咒的人如果当夜被占卜了，这个人将被咒杀。
-  p 使用了这个能力的夜晚，如果丑刻参自身遭到了占卜也会被咒杀。
+  p 使用了诅咒的夜晚，如果丑刻参被占卜了，丑刻参将被咒杀。
   h2 胜利条件
   p 人狼阵营的胜利
 
