--- a/client/templates/user/profile.jade
+++ b/client/templates/user/profile.jade
@@ -56,9 +56,9 @@ section.profile
   #grapharea
   section
     h1 称号
-    p 入室時に名字の前に表示する肩書きを、獲得した称号を組み合わせて設定できます。
+    p 加入游戏时称号将显示在名字前面，可以在此处对获得的称号进行组合。
     p 
-      | 称号獲得数:
+      | 称号获得数:
       span#prizenumber 0
     #pdragzone
       #prizes
