--- a/client/templates/jobs/LoneWolf.jade
+++ b/client/templates/jobs/LoneWolf.jade
@@ -4,6 +4,6 @@ section.jobmanual
   h2 特殊能力
   p 和普通人狼一样可以与其他人狼对话并决定袭击目标（袭击目标的决定以最先决定的人为准）。
   h2 胜利条件
-  p 人狼阵营的胜利。人狼中只有自己生存。
+  p 人狼阵营的胜利，并且人狼中只有自己生存。
   p 一匹狼获胜的时候，其他人狼将败北。
 
