--- a/client/templates/jobs/Noble.jade
+++ b/client/templates/jobs/Noble.jade
@@ -2,7 +2,8 @@ section.jobmanual
   h1 贵族
   p 桃栗配置中的特殊职业。村人侧。受到村人的尊敬，是受到奴隶憎恨的买主。
   h2 特殊能力
-  p 被人狼袭击的时候，如果场上还有奴隶生存，奴隶将会替死。但是，不知道奴隶是谁。
+  p 贵族被人狼袭击的时候，如果场上还有奴隶生存，所有奴隶将会替死，贵族将活下来。
+  p 贵族不会被告知奴隶是谁。
   h2 胜利条件
   p 村人阵营的胜利。
 
