--- a/client/templates/jobs/Bomber.jade
+++ b/client/templates/jobs/Bomber.jade
@@ -2,7 +2,7 @@ section.jobmanual
   h1 炸弹魔
   p 「ねじれ天国」中登场的角色。人狼阵营。
   h2 特殊能力
-  p 游戏中只限一次，可以向生存者身上秘密的绑上炸弹。
+  p 游戏中<strong>只限一次</strong>，可以向生存者身上秘密的绑上炸弹。
   p 身上绑有炸弹的人被处刑死亡的时候，会在投票者中随机选一人连坐死亡。
   p 身上绑有炸弹的人被人狼或吸血鬼袭击的时候，袭击者会连坐死亡。
   p 身上绑有炸弹的人被他人护卫的时候，护卫者连坐死亡。
