--- a/client/templates/jobs/GreedyWolf.jade
+++ b/client/templates/jobs/GreedyWolf.jade
@@ -3,7 +3,7 @@ section.jobmanual
   p 「Twitter人狼」中存在的职业。人狼的一种。
   h2 特殊能力
   p 基本上和人狼相同。
-  p 游戏中只限一次，为了满足自己的贪欲一夜之间可以袭击两个人。
+  p 游戏中<strong>只限一次</strong>，为了满足自己的贪欲一夜之间可以袭击两个人。
   p 这时，如果袭击对象没有死的场合下，贪婪的狼在自己会死去。
   p 两名被袭击者中一人袭击失败的时候，只有贪婪的狼死去，两人都失败的时候，贪婪的狼以外还有一名人狼会死去
   h2 胜利条件
