--- a/client/templates/jobs/Miko.jade
+++ b/client/templates/jobs/Miko.jade
@@ -2,7 +2,7 @@ section.jobmanual
   h1 巫女
   p 「Twitter人狼」中存在的职业。村人侧。
   h2 特殊能力
-  p 游戏中只限一次，可以在夜里使用神圣的力量守护自己。
+  p 游戏中<strong>只限一次</strong>，可以在夜里使用神圣的力量守护自己。
   p 使用能力之后，第二天白天即使被处刑了也不会死。
   h2 胜利条件
   p 村人阵营的胜利。
