--- a/client/templates/jobs/PI.jade
+++ b/client/templates/jobs/PI.jade
@@ -2,7 +2,7 @@ section.jobmanual
   h1 超常现象研究者
   p 「究极人狼」中登场的角色。村人侧。
   h2 特殊能力
-  p 在觉得合适的时机只限一次，夜里选择一个人，对这个人和他的左右两人进行占卜，判断其中是否有人狼。
+  p 在觉得合适的时机<strong>只限一次</strong>，夜里选择一个人，对这个人和他的左右两人进行占卜，判断其中是否有人狼。
   p 被选中的人中有妖狐的时候，妖狐将被咒杀。
   h2 胜利条件
   p 村人阵营的胜利。
