--- a/client/templates/jobs/Pyrotechnist.jade
+++ b/client/templates/jobs/Pyrotechnist.jade
@@ -3,7 +3,7 @@ section.jobmanual
   p 「月下人狼」原创的职业。看到美丽的烟火，连人狼都呆住了。为勤劳的人狼玩家放一枚烟火吧。
   p 所有玩家都会看着烟火，忘记手边的工作。
   h2 特殊能力
-  p 游戏中只限一次，在白天选择命令后，会立刻通告晚上要释放烟火的消息。
+  p 游戏中<strong>只限一次</strong>，在白天选择命令后，会立刻通告晚上要释放烟火的消息。
   p 释放烟火的晚上所有人不能发动技能，包括但不限于占卜师、人狼。
   h2 胜利条件
   p 村人阵营的胜利。
