--- a/client/templates/jobs/ThreateningWolf.jade
+++ b/client/templates/jobs/ThreateningWolf.jade
@@ -3,7 +3,7 @@ section.jobmanual
   p 「Twitter人狼」中存在的职业。人狼的一种。
   h2 特殊能力
   p 基本上与人狼相同。
-  p 游戏中只限一次，在白天选择一个人进行威吓。
+  p 游戏中<strong>只限一次</strong>，在白天选择一个人进行威吓。
   p 被威吓的人当天夜里无法使用技能。
   h2 胜利条件
   p 人狼阵营的胜利
