--- a/client/templates/jobs/ToughWolf.jade
+++ b/client/templates/jobs/ToughWolf.jade
@@ -3,7 +3,7 @@ section.jobmanual
   p 「Twitter人狼」中存在的职业。人狼的一种。
   h2 特殊能力
   p 基本上与人狼相同。
-  p 游戏中只限一次，抱着牺牲的觉悟袭击目标，这个夜里即使一般情况下杀不掉的对象也能杀死。
+  p 游戏中<strong>只限一次</strong>，抱着牺牲的觉悟袭击目标，这个夜里即使一般情况下杀不掉的对象也能杀死。
   p 但是，在杀死一般情况下杀不掉的对象对象后，硬汉人狼会同归于尽。
   h2 胜利条件
   p 人狼阵营的胜利
