--- a/client/templates/jobs/Dictator.jade
+++ b/client/templates/jobs/Dictator.jade
@@ -2,7 +2,7 @@ section.jobmanual
   h1 独裁者
   p 「うそつき人狼」中登场的角色。村人侧。
   h2 特殊能力
-  p 游戏中只限一次，可以中断昼间讨论，强行指定处刑对象。
+  p 游戏中<strong>只限一次</strong>，可以中断昼间讨论，强行指定处刑对象。
   h2 胜利条件
   p 村人阵营的胜利。
 
