--- a/client/templates/jobs/Merchant.jade
+++ b/client/templates/jobs/Merchant.jade
@@ -2,7 +2,7 @@ section.jobmanual
   h1 商人
   p 桃栗配置中的特殊职业。你是住在街上的奇怪的商人，为了拯救村人向他们送出了神秘的礼物。
   h2 特殊能力
-  p 在一个你喜欢的时机，只限一次，可以在夜里向喜欢的对象送出「占卜套装」・「灵能套装」・「守护套装」中的一件。
+  p 在一个你喜欢的时机，<strong>只限一次</strong>，可以在夜里向喜欢的对象送出「占卜套装」・「灵能套装」・「守护套装」中的一件。
   p 收到礼物的人，能够额外使用商人赠送的技能（不强制使用）。
   h2 胜利条件
   p 村人阵营的胜利。
