--- a/client/templates/jobs/Priest.jade
+++ b/client/templates/jobs/Priest.jade
@@ -2,7 +2,7 @@ section.jobmanual
   h1 圣职者
   p 「究极人狼」中登场的角色。村人侧。
   h2 特殊能力
-  p 在觉得合适的时机只限一次，在夜晚选择一个人用神圣的力量对其守护。被守护的一方不会被告知“被神圣的力量守护了”这件事。
+  p 在觉得合适的时机<strong>只限一次</strong>，在夜晚选择一个人用神圣的力量对其守护。被守护的一方不会被告知“被神圣的力量守护了”这件事。
   p 被守护的人在第二天的投票中即使被处刑了也不会死。
   p 被守护的人免死的时候，才会被告知“被神圣的力量守护了”这件事。
   p 圣职者不能守护自己。
