--- a/client/templates/jobs/Prince.jade
+++ b/client/templates/jobs/Prince.jade
@@ -2,7 +2,7 @@ section.jobmanual
   h1 王子
   p 「究极人狼」中登场的角色。村人侧。
   h2 特殊能力
-  p 被投票处刑的时候，只限一次可以免除处刑。
+  p 被投票处刑的时候，<strong>只限一次</strong>可以免除处刑。
   h2 胜利条件
   p 村人阵营的胜利。
 
