--- a/client/templates/jobs/TroubleMaker.jade
+++ b/client/templates/jobs/TroubleMaker.jade
@@ -2,7 +2,7 @@ section.jobmanual
   h1 闹事者
   p 「究极人狼」中存在的职业。村人侧。
   h2 特殊能力
-  p 游戏中只限一次，可以在夜晚使用能力引发混乱。
+  p 游戏中<strong>只限一次</strong>，可以在夜晚使用能力引发混乱。
   p 能力使用之后，第二天将有两个人被投票处刑。
   h2 胜利条件
   p 村人阵营的胜利。
