--- a/client/templates/game/newroom.jade
+++ b/client/templates/game/newroom.jade
@@ -21,8 +21,8 @@ section.rooms
           | 最大人数
           input(type="number",min="5",name="number",step="1",value="30")
       p
-        label(title="假面模式下，游戏中各个玩家的ID不会公开。")
-          | 假面模式
+        label(title="匿名模式下，游戏中各个玩家的ID不会公开。")
+          | 匿名模式
           select(name="blind")
             option(value="") 否
             option(value="yes",selected) 是（结束后公开）
