--- a/manual/features.jade
+++ b/manual/features.jade
@@ -11,7 +11,7 @@ section.manual
   h2 登録制
   p この人狼は<strong>登録制</strong>です。ユーザー登録をした後に人狼に参加できます。ユーザー登録は<b>ユーザーID</b>と<b>密码</b>のみで行うことができます。
   p 登録後はユーザー名も决定し、基本的に村に参加する場合はユーザーIDは公開され、そのユーザー名で参加します（ユーザー名はいつでも変更可能）。
-  p ただし、ユーザーIDは公開せずユーザー名も村に入るときに決める<b>假面模式</b>モードもあります。
+  p ただし、ユーザーIDは公開せずユーザー名も村に入るときに決める<b>匿名模式</b>モードもあります。
 
   h2 豊富な役職
   p
