--- a/manual/play-other.jade
+++ b/manual/play-other.jade
@@ -6,13 +6,13 @@ section.manual
   h2 部屋を探す
   p <a href="/rooms">房间一览</a>に、現在たっている部屋の一览が表示されています。状態が「募集中」の部屋が、これから参加できる部屋です。
   p <img src="/images/lock.png" alt="鍵">鍵のマークがついている部屋は房间加密の部屋で、入るときに密码を入力する必要があります。<strong>房间加密の部屋でも、终了した後は全員に公開されます。</strong>
-  p <img src="/images/blind.png" alt="假面模式">このマークがついている部屋は<b>假面模式</b>の部屋です。ふつうの部屋では、登録時に設定したユーザーIDと、設定したユーザー名を使って部屋に参加します。それに対し假面模式の部屋では、その場で名字を決めてユーザーIDも分からないので、互いに誰か分かりません。
+  p <img src="/images/blind.png" alt="匿名模式">このマークがついている部屋は<b>匿名模式</b>の部屋です。ふつうの部屋では、登録時に設定したユーザーIDと、設定したユーザー名を使って部屋に参加します。それに対し匿名模式の部屋では、その場で名字を決めてユーザーIDも分からないので、互いに誰か分かりません。
   p <img src="/images/gm.png" alt="GM">このマークがついている部屋は有GMの部屋です。GMは、加入游戏せずに動向を見守る人です。
   p 部屋名のリンクを開くとその部屋に入りますが、この時点では<strong>まだ加入游戏することにはなりません</strong>ので、気軽に部屋を開いて構いません。
 
   h3 加入游戏する
   p 部屋を開くと最初は观战者として部屋を見ていることになります。加入游戏していなくても、发言フォームから发言して会話できます。
-  p 「加入游戏」ボタンが表示されているので、クリックすると加入游戏できます。假面模式の場合はこのとき名字を入力できます。
+  p 「加入游戏」ボタンが表示されているので、クリックすると加入游戏できます。匿名模式の場合はこのとき名字を入力できます。
   h3 加入游戏したら
   p 加入游戏すると、「退出游戏」「准备/取消准备」「帮手」の3つのボタンがあります。
   p 「退出游戏」ボタンを押すと参加を取りやめてゲームから抜けます。
