--- a/manual/play-owner.jade
+++ b/manual/play-owner.jade
@@ -10,7 +10,7 @@ section.manual
   p 「密码」にチェックを入れて密码を入力すると、その密码を入力しないと入室できない部屋になります。内輪村をやりたいときに便利です。誰でも入れる部屋にする場合は「密码」のチェックは入れません。<strong>房间加密の部屋にしても、终了後は全員に公開されます</strong>。個人情報などは部屋に載せないようにしてください。
   p 「コメント」には、部屋一览に表示されるコメントを入力します。なくても構いません。
   p 「人数」は<strong>最大人数</strong>です。その数まで集まらなくてもゲームは開始できます。ただし、最低4人必要です。
-  p 「假面模式」は、ありにすると<strong>入室時に名字を决定し、参加者のユーザーIDが隠されます</strong>。誰が誰か分からない状態で人狼をプレイできます。逆になしにした場合は、ユーザーIDが公開され、あらかじめ登録した名字で参加するので、誰が誰か分かります。
+  p 「匿名模式」は、ありにすると<strong>入室時に名字を决定し、参加者のユーザーIDが隠されます</strong>。誰が誰か分からない状態で人狼をプレイできます。逆になしにした場合は、ユーザーIDが公開され、あらかじめ登録した名字で参加するので、誰が誰か分かります。
   p 「GM」は、ありにすると<strong>オーナーがGMになります</strong>。GM（游戏管理员）は、加入游戏しません。ゲーム中は常に全員的职业と发言を確認でき、全員または個人個人に対してメッセージを送ることができます。
   h3 部屋を作成する
   p 其他の設定は、部屋を作った後に行います。
@@ -20,7 +20,7 @@ section.manual
   p
     img(src="/images/manual-play-owner-1.png",alt="部屋作成直後のオーナーの様子の画像")
   p オーナーには、「加入游戏」「展开游戏开始界面」「将参加者踢出游戏」「废弃这个房间」のボタンが表示されています。「加入游戏」以外はオーナー専用のボタンです。
-  p 「加入游戏」ボタンを押すと加入游戏してプレイヤーとして登録されます。假面模式ありの部屋の場合は、このとき名字を決めるダイアログが出るので名字を決めて下さい。
+  p 「加入游戏」ボタンを押すと加入游戏してプレイヤーとして登録されます。匿名模式ありの部屋の場合は、このとき名字を決めるダイアログが出るので名字を決めて下さい。
   p 加入游戏すると、「加入游戏」ボタンの代わりに「退出游戏」「准备/取消准备」「帮手」の3つのボタンが出現します。これらはオーナー以外でも同じなので、詳しくは<a href="play-other">オーナー以外の流れ</a>を参照して下さい。
   h3 配役設定をする
   p 「展开游戏开始界面」ボタンを押すと、规则設定画面が出現します（最初から出ているときもあります）。
