--- a/manual/play.jade
+++ b/manual/play.jade
@@ -8,7 +8,7 @@ section.manual
   p このサーバーでは、まず<b>ユーザー登録</b>をしないと加入游戏できません。まず<a href="/">トップページ</a>から新規登録して下さい。
   p 登録に必要なのは、ユーザーIDと密码だけです。
   p その後は、<a href="/my">マイページ</a>から表示上の<b>名字</b>を変更できます。
-  p この名字は人狼に参加するときにも使われてIDも公開されますが、<b>假面模式</b>の部屋の場合は、その場で名字を決めて入室してIDは明かされません。
+  p この名字は人狼に参加するときにも使われてIDも公開されますが、<b>匿名模式</b>の部屋の場合は、その場で名字を決めて入室してIDは明かされません。
  
   h2 遊ぶまでの流れ
   p 人狼を遊ぶには、まず誰かが新しい<strong>部屋</strong>を作ります。部屋を作った人は<b>オーナー</b>になり、ゲームの规则設定をしてゲームを開始させる役割を持ちますが、これはいわゆる<strong>GMではありません</strong>（ただし、GMになることもできます）。ゲームが開始したあとは、オーナーも他の人と同じように参加できます。
