--- a/client/templates/jobs/Blasphemy.jade
+++ b/client/templates/jobs/Blasphemy.jade
@@ -2,10 +2,10 @@ section.jobmanual
   h1 亵渎者
   p 「ねじれ天国」中存在的职业。和背德者一样，虽然是村人却属于妖狐阵营。
   h2 特殊能力
-  p第一天夜里选择一个人进行亵渎。被亵渎的人将在不知情的情况下成为狐凭。
-  p但是，一旦亵渎了逃亡者・女王观战者・骗子・间谍Ⅱ・一匹狼的时候，对方不会发生变化，而亵渎者自身将在不知情的情况下变成狐凭。
-  p在终了判定时狐凭会被当做妖狐阵营计算，狐凭被人狼袭击的时候不会死亡，狐凭被占卜的时候会被咒杀。但是狐凭的胜利条件不会改变。
-  p亵渎者在亵渎了某个人之后就和背德者相同，在妖狐（包括狐凭）全灭之后，会追随妖狐自杀。
-  h2 勝利条件
+  p 第一天夜里选择一个人进行亵渎。被亵渎的人将在不知情的情况下成为狐凭。
+  p 但是，一旦亵渎了逃亡者・女王观战者・骗子・间谍Ⅱ・一匹狼的时候，对方不会发生变化，而亵渎者自身将在不知情的情况下变成狐凭。
+  p 在终了判定时狐凭会被当做妖狐阵营计算，狐凭被人狼袭击的时候不会死亡，狐凭被占卜的时候会被咒杀。但是狐凭的胜利条件不会改变。
+  p 亵渎者在亵渎了某个人之后就和背德者相同，在妖狐（包括狐凭）全灭之后，会追随妖狐自杀。
+  h2 胜利条件
   p 妖狐阵营的胜利
 
