--- a/manual/features.jade
+++ b/manual/features.jade
@@ -32,7 +32,7 @@ section.manual
     li <b>替身君</b>（初日犠牲者）のON/OFFが選択可能。
     li 昼・夜の時間は秒単位で設定可能。
     li <b>遗言</b>のON/OFFが設定可能。
-    li 人狼的远吠・共有者的低语声は他の参加者に能听到か听不到か設定可能。
+    li 狼的远吠・共有者的低语声は他の参加者に能听到か听不到か設定可能。
     li 占卜结果・灵能结果は夜出るか朝出るか設定可能。
     li <b>恋人阵营</b>の胜利条件は「终了时生存」と「终了時に只有恋人生存」の2つから選択可能。
     li 究极人狼から、<b>GM灵能</b>（灵能结果が全員に知らされる）が使用可能。
