--- a/manual/spec.jade
+++ b/manual/spec.jade
@@ -18,8 +18,8 @@ section.manual
   h3 占い・灵能结果が表示されるタイミング
   p 占卜结果や灵能结果の表示されるタイミングは「翌朝」と「即時」で<strong>設定可能</strong>です（デフォルトは翌朝）。
 
-  h3 人狼的远吠・共有者的低语声が他の参加者に能听到かどうか
-  p 人狼的远吠・共有者的低语声が他の参加者に能听到かどうかは、それぞれ<strong>設定可能</strong>です。デフォルトは、遠吠えは「能听到」・共有者は「听不到」です。
+  h3 狼的远吠・共有者的低语声が他の参加者に能听到かどうか
+  p 狼的远吠・共有者的低语声が他の参加者に能听到かどうかは、それぞれ<strong>設定可能</strong>です。デフォルトは、遠吠えは「能听到」・共有者は「听不到」です。
 
   h3 妖狐の念話が他の参加者に能听到かどうか
   p 妖狐どうしは夜に会話可能です。これは他の参加者には聞こえません。
