translation of features

--- a/manual/features.jade
+++ b/manual/features.jade
@@ -1,42 +1,42 @@
 section.manual
   p: a(href="/manual") 返回
-  h1 この人狼の特徴
+  h1 本人狼游戏的特点
   
-  h2 リアルタイム性
-  p この人狼はブラウザ上でプレイできるにも関わらず、<strong>完全リアルタイム</strong>という特徴を持っています。
-  p リアルタイムというのはゲーム中の昼夜が現実の昼夜に対応する長期人狼ということではなく、<strong>更新などをしなくても誰かの发言がその瞬間に全員に届く</strong>ということです。。
-  p これは、従来のCGIなどとは全く異なる新技術(WebSocket)を用いることで実現しています。
-  p それにより、自動更新を待ったり更新ボタンを押したりする手間がなく快適に人狼を楽しむことができます。リアルタイム用技術なので、サーバーや参加者に高負荷がかかることはありません。
+  h2 实时性
+  p 尽管这个人狼游戏是基于浏览器的，但是具有<strong>完全实时性</strong>的特点。
+  p 所谓实时是为了与长期人狼（人狼游戏的一种模式，游戏中是昼夜与现实世界的昼夜相等，每24小时一个回合，更接近于一个留言板）相区别，<strong>某人发言之后，全员不需要刷新页面就能立刻看到新的发言</strong>。
+  p 这是使用了与之前的CGI不同的新技术(WebSocket，最新的浏览器已经几乎全部支持)实现的。
+  p 这样一来就可以很爽的不需要按F5就能玩人狼游戏了。而且得益于WebSocket的特性，实时在线也不会对服务器和用户造成很高的负担。
   
-  h2 登録制
-  p この人狼は<strong>登録制</strong>です。ユーザー登録をした後に人狼に参加できます。ユーザー登録は<b>ユーザーID</b>と<b>密码</b>のみで行うことができます。
-  p 登録後はユーザー名も决定し、基本的に村に参加する場合はユーザーIDは公開され、そのユーザー名で参加します（ユーザー名はいつでも変更可能）。
-  p ただし、ユーザーIDは公開せずユーザー名も村に入るときに決める<b>匿名模式</b>モードもあります。
+  h2 注册制
+  p 这个人狼游戏使用<strong>注册制</strong>。注册即玩。注册过程只需要输入一组<b>账号</b>与<b>密码</b>，密码文本不会明文保存。
+  p 注册<b>账号</b>后决定一个用户名（<b>昵称</b>），一般情况下参与游戏时账号将被公开（此时他人可以访问您的个人页面），以设定的昵称加入游戏（昵称可以随时在个人中心变更）。
+  p 此外，也存在不公开账号，需要在加入游戏时设定昵称的<b>匿名模式</b>。
 
-  h2 豊富な役職
+  h2 丰富的职业
   p
-    | 現在
+    | 现在可以使用的职业有
     b#number_of_jobs ???
-    | 種類的职业が利用可能です。
-  p 標準的な役職の他にも、さまざまな種類の人狼から特殊な役職が搭載されています。
-  p: a(href="/manual/joblist") 役職一览
+    | 种。
+  p 除了标准的职业之外，也有从各种各样的人狼游戏中借鉴的特殊职业。
+  p: a(href="/manual/joblist") 职业一览
   
-  h2 自由度の高さ
-  p この人狼では、標準的な配役の他にも<strong>自由配役</strong>が利用可能であり、多彩な役職を組み合わせて思い通りの村を作ることができます。
-  p また、<strong>黑暗火锅</strong>があります。
-  p 他にも、<strong>详细な规则設定</strong>が可能です。
-  h3 规则設定の例
+  h2 高自由度
+  p 这个人狼游戏除了标准职业配置以外，也可以采用<strong>自由配役</strong>来创造出一个如你所想的各种杂烩的村子出来。
+  p 或者<strong>黑暗火锅</strong>这样的随机分配职业的模式。
+  p 此外还可以<strong>设置详细的规则</strong>。
+  h3 规则设定举例
   ul
-    li <b>决定者</b>・<b>权力者</b>は人数に関わらずON/OFFの設定が可能。
-    li わかめてから<b>死亡笔记</b>・究极人狼から<b>狼的仆从</b>・<b>酒鬼</b>を入れることが可能。
-    li <b>替身君</b>（初日犠牲者）のON/OFFが選択可能。
-    li 昼・夜の時間は秒単位で設定可能。
-    li <b>遗言</b>のON/OFFが設定可能。
-    li 狼的远吠・共有者的低语声は他の参加者に能听到か听不到か設定可能。
-    li 占卜结果・灵能结果は夜出るか朝出るか設定可能。
-    li <b>恋人阵营</b>の胜利条件は「终了时生存」と「终了時に只有恋人生存」の2つから選択可能。
-    li 究极人狼から、<b>GM灵能</b>（灵能结果が全員に知らされる）が使用可能。
-    li <b>15秒规则</b>も、使用/非使用の選択及び時間の秒単位の設定が可能。
-    li <b>败北村</b>が使用可能。
-    li <a href="/manual/quantumwerewolf">量子人狼</a>がプレイ可能。
-  p 其他、<a href="/manual/spec">この人狼の仕様</a>も参照しましょう。
+    li <b>决定者</b>（随机一人，投票以1.5票计）・<b>权力者</b>（随机一人，投票以2票计，相当于<b>国王</b>）可以不受人数的限制设定为ON/OFF。
+    li 可以加入从「わかめて」引入的<b>死亡笔记</b>・从「究极人狼」引入的<b>狼的仆从</b>・<b>酒鬼</b>添加到游戏中。
+    li 可以设定<b>替身君</b>（第一天的牺牲者，）的ON/OFF。
+    li 昼・夜的时长可以设定到秒。
+    li 可以设定<b>遗言</b>的ON/OFF。
+    li 可以设定夜晚能否听到「狼的远吠」（<b>嗷呜・・・</b>）・「共有者的低语声」（<b>沙沙・・・</b>）。
+    li 可以设定「占卜结果」・「灵能结果」是<b>夜里立刻公开</b>还是<b>天亮才公开</b>。
+    li 可以选择<b>恋人阵营</b>的胜利条件是「终了时生存」或者「终了时只有恋人生存」之一。
+    li 可以使用从「究极人狼」引入的<b>GM灵能</b>（处刑后，灵能结果向全员告知）。
+    li 可以设定<b>15秒规则</b>（白天刚到来的15秒内任何人不能说话）是否使用，并且这个时间可以设定到秒。
+    li 可以使用<b>败北村</b>（胜负条件颠倒，人狼们但求速死）。
+    li 可以进行<a href="/manual/quantumwerewolf">量子人狼</a>游戏。
+  p 其他事项，请参照<a href="/manual/spec">游戏说明</a>。
