--- a/manual/features.jade
+++ b/manual/features.jade
@@ -40,3 +40,4 @@ section.manual
     li 可以使用<b>败北村</b>（胜负条件颠倒，人狼们但求速死）。
     li 可以进行<a href="/manual/quantumwerewolf">量子人狼</a>游戏。
   p 其他事项，请参照<a href="/manual/spec">游戏说明</a>。
+  p 本页面由<b>明坂聡美</b>提供翻译。
