spec and translation fix

--- a/client/templates/jobs/Counselor.jade
+++ b/client/templates/jobs/Counselor.jade
@@ -3,7 +3,7 @@ section.jobmanual
   p 「Twitter人狼」中登场的角色。可以策反狂人。
   h2 特殊能力
   p 第二天以后，夜晚可以选择一个人，如果此人是村人阵营以外的人，将策反他，把他的胜利条件改变为「村人阵营胜利」。
-  p 但是，如果选择了狼人或吸血鬼的场合下，会被立刻反杀。
+  p 但是，如果选择了人狼或吸血鬼的场合下，会被立刻反杀。
   p 被策反的一方能够知道自己被策反了，但是不会知道策士是谁。此外，策反行动的成功与否不得而知。
   h2 胜利条件
   p 村人阵营的胜利
