--- a/manual/about.jade
+++ b/manual/about.jade
@@ -7,10 +7,11 @@ section.manual
   p 月下人狼的twitter账号是<a href="https://twitter.com/Sunev_C" target="_blank">@Sunev_C</a>。
   p 建房之类的通知会在twitter上公开。
   p 但是twitter被墙了所以并没有什么卵用。
+  h2 微博账号
+  p 有把twitter功能照搬到新浪微博的计划，但是具体时间表暂时还没有，可以姑且关注一下这个微博(<a href="http://weibo.com/u/5406068657" target="_blank">月下人狼-BOT</a>)。
   h2 开发者
   p 开发者是日本的うひょ(<a href="https://twitter.com/uhyo_" target="_blank">@uhyo_</a>)。
   p 翻译者兼服主是Sunev(<a href="https://github.com/Sunev" target="_blank">@Sunev</a>)。
 
-  p 月下人狼是一个开源项目。
+  p 月下人狼是一个MIT开源项目。
   p 原作者的GitHub (<a href="https://github.com/uhyo/jinrou" target="_blank">uhyo/jinrou - Github</a>)
-  p 欢迎大家多多参与中文版的文本翻译(<a href="https://github.com/Sunev/jinrou/tree/translate/client/templates/jobs" target="_blank">各职业的说明</a>) (<a href="https://github.com/Sunev/jinrou/tree/translate/manual" target="_blank">游戏的说明</a>)
