--- a/manual/changelog.jade
+++ b/manual/changelog.jade
@@ -27,10 +27,10 @@ section.manual
     li.bugfix 间谍が村を去ったと同時に恶女に変化した場合、恶女が能力の対象を選択しても反映されなくなるバグを修正しました。(27a994e)
   h2 v1.10.1-6(f325239;2015-04-28)
   ul
-    li.bugfix 人狼系・吸血鬼・妖狐が陷阱师に护卫されたまたは炸弹魔に爆弾を仕掛けられた状態で人狼に襲撃された場合、陷阱师・炸弹魔の効果が発動しないバグを修正しました。(5c0066a)
+    li.bugfix 人狼系・吸血鬼・妖狐が陷阱师に护卫されたまたは炸弹魔に爆弾を仕掛けられた状态で人狼に襲撃された場合、陷阱师・炸弹魔の効果が発動しないバグを修正しました。(5c0066a)
   h2 v1.10.1-5(2b2f974;2015-03-21)
   ul
-    li.bugfix 替身君が决定者などのサブ役職を持った状態で模仿者になり模仿者を模仿者した場合、ゲームが停止するバグを修正しました。(932ba98)
+    li.bugfix 替身君が决定者などのサブ役職を持った状态で模仿者になり模仿者を模仿者した場合、ゲームが停止するバグを修正しました。(932ba98)
     li.bugfix Endless黑暗火锅に途中参加する場合、参加前の昼に参加者と同じログで发言できるバグを修正しました。(97b4c9e)
   h2 v1.10.1-4(2015-03-19)
   ul
@@ -59,7 +59,7 @@ section.manual
     li.bugfix 替身君が国王の場合投票が2票分にならないバグを修正しました。(c47b058)
     li.bugfix 二重身等が変化した場合役職名の表示がおかしくなることがあるバグを修正しました。(42215b6)
     li.bugfix 替身君が人狼系で他の生存している人狼系が全て孤独的狼の場合、替身君が襲撃せずに突然死するバグを修正しました。(da1492f)
-    li.change 孤独的狼が襲撃可能になった後に他の人狼系が襲撃可能な状態になった場合、孤独的狼は襲撃不可能に戻るようになりました。(da1492f)
+    li.change 孤独的狼が襲撃可能になった後に他の人狼系が襲撃可能な状态になった場合、孤独的狼は襲撃不可能に戻るようになりました。(da1492f)
     li.new 新配役「Endless黑暗火锅」を追加しました。主にゲーム性がまだα版です。(232f155)
   h2 v1.9.10-1(79c9b96;2015-01-01)
   ul
@@ -73,8 +73,8 @@ section.manual
     li.bugfix 面包店が死亡した後蘇生して再度死亡した場合にそれを知らせるログが出現しないバグを修正しました。(5d42c01)
   h2 v1.9.9-3(a0224b5;2014-12-20)
   ul
-    li.bugfix 妖术师が何らかのサブ役職（猎人の护卫・カルトなど）を持った状態で人狼占卜师に占われた場合にゲーム進行が停止するバグを修正しました。(49e4e99)
-    li.bugfix 襲撃可能な人狼が替身君しかいない状態で、狼之子の効果により2人以上襲撃可能な状態でも替身君が1人しか不袭击バグを修正しました。(366828b)
+    li.bugfix 妖术师が何らかのサブ役職（猎人の护卫・カルトなど）を持った状态で人狼占卜师に占われた場合にゲーム進行が停止するバグを修正しました。(49e4e99)
+    li.bugfix 襲撃可能な人狼が替身君しかいない状态で、狼之子の効果により2人以上襲撃可能な状态でも替身君が1人しか不袭击バグを修正しました。(366828b)
     li.bugfix 替身君が妖术师になった場合に夜的职业実行を2回行うバグを修正しました。(9c4f98e)
     li.bugfix 骗子が猎人・風来猎人・犬の护卫を受けている場合に占卜结果が表示されないことがあるバグを修正しました。(5d00239)
   h2 v1.9.9-2(b0dd475;2014-10-28)
@@ -258,7 +258,7 @@ section.manual
   ul
     li.change マイページの战绩展示および黑暗火锅の阵营表示において、蝙蝠の阵营を「蝙蝠」から「其他」に、吸血鬼の阵营を「其他」から「吸血鬼阵营」に変更しました。(531994d)
     li.change 逃亡者が吸血鬼の襲撃および魔女の毒薬の対象になったときの動作を、「死ぬ」から「死なない」に変更しました。これに加えて人狼に襲撃されても死にませんが、其他の要因では死亡します。(facfe1a)
-    li.change 逃亡者・策士が猎人または陷阱师に护卫されている状態で能力の対象に人狼を選択した場合の動作が、「死なない」だったのを「死ぬ」に修正しました。(facfe1a)
+    li.change 逃亡者・策士が猎人または陷阱师に护卫されている状态で能力の対象に人狼を選択した場合の動作が、「死なない」だったのを「死ぬ」に修正しました。(facfe1a)
     li.change 逃亡者・策士が狂人狼を対象に選択した場合の動作を「死ぬ」から「死なない」に変更しました。(7ea3146)
     li.bugfix 占卜结果が「立刻知道」の設定のときに占卜师が妖狐を占った場合に、夜明けに死亡ログが出る前に灵界に移動するバグを修正しました。(b9559a4)
     li.bugfix 诅咒师に呪いをかけられた人が、次の日になっても发言できないままになるバグを修正しました。(adf1e63)
