--- a/manual/features.jade
+++ b/manual/features.jade
@@ -28,7 +28,7 @@ section.manual
   h3 规则设定举例
   ul
     li <b>决定者</b>（随机一人，投票以1.5票计）・<b>权力者</b>（随机一人，投票以2票计，相当于<b>国王</b>）可以不受人数的限制设定为ON/OFF。
-    li 可以加入从「わかめて」引入的<b>死亡笔记</b>・从「究极人狼」引入的<b>狼的仆从</b>・<b>酒鬼</b>添加到游戏中。
+    li 可以把从「わかめて」引入的<b>死亡笔记</b>・从「究极人狼」引入的<b>狼的仆从</b>・<b>酒鬼</b>添加到游戏中。
     li 可以设定<b>替身君</b>（第一天的牺牲者，）的ON/OFF。
     li 昼・夜的时长可以设定到秒。
     li 可以设定<b>遗言</b>的ON/OFF。
