--- a/manual/login.jade
+++ b/manual/login.jade
@@ -2,7 +2,7 @@ section.manual
   p: a(href="/manual") 返回
   h1 关于登录
   p 要参与本月下人狼服务器的游戏，需要您<b>注册账号</b>。
-  p 注册账号之后能够提升游戏的安全性，并且便于管理<strong>称号</strong>系统（称号系统由于某些未知的原因暂时未能正常工作）。
+  p 注册账号之后能够提升游戏的安全性，并且便于管理<strong>称号</strong>系统。
   p 用户必须使用<b>账号</b>与<b>密码</b>进行登录。
   
   h2 如果您已经注册
