--- a/manual/play-game.jade
+++ b/manual/play-game.jade
@@ -14,7 +14,7 @@ section.manual
   p 「普通」となっているセレクトボックスは「小さく」「普通」「大きく」があり、文字の大きさを選べます。注目を集めたかったり重要なことを言うときは大きくするなどして下さい。
   p その横の「向全员发言」は、发言の種類を指定します。昼の場合は、全員に向けて发言する「向全员发言」と、自分しか見えない「自言自语」があります。自言自语も人狼が终了したあとは見えるので、自分の本心を書いておいたりするとあとでみた人が楽しめるかもしれません。
   p 「複数行」にチェックを入れると、複数行发言が可能です。
-  p その右の「昼 5:23」は、現在の状態（昼か夜か）とその残り時間です。この場合、昼の話し合いはあと5分23秒で终了することを示しています。
+  p その右の「昼 5:23」は、現在の状态（昼か夜か）とその残り時間です。この場合、昼の話し合いはあと5分23秒で终了することを示しています。
   p その右の「<b>遗言</b>」ボタンは、遗言を使用する設定になっているときだけ使えます。遗言は、処刑されたり襲われたりして死ぬときにメッセージを残せる機能です。遗言はいつでも書くことができます。
   p 遗言ボタンを押すと遗言編集フォームが出現します。編集して决定すると戻ります。
   p その右の「<b>规则</b>」ボタンは、現在の配役や其他の规则を確認できるボタンです。
