--- a/manual/play-owner.jade
+++ b/manual/play-owner.jade
@@ -10,7 +10,7 @@ section.manual
   p 「密码」にチェックを入れて密码を入力すると、その密码を入力しないと入室できない部屋になります。内輪村をやりたいときに便利です。誰でも入れる部屋にする場合は「密码」のチェックは入れません。<strong>房间加密の部屋にしても、终了後は全員に公開されます</strong>。個人情報などは部屋に載せないようにしてください。
   p 「コメント」には、部屋一览に表示されるコメントを入力します。なくても構いません。
   p 「人数」は<strong>最大人数</strong>です。その数まで集まらなくてもゲームは開始できます。ただし、最低4人必要です。
-  p 「匿名模式」は、ありにすると<strong>入室時に名字を决定し、参加者のユーザーIDが隠されます</strong>。誰が誰か分からない状態で人狼をプレイできます。逆になしにした場合は、ユーザーIDが公開され、あらかじめ登録した名字で参加するので、誰が誰か分かります。
+  p 「匿名模式」は、ありにすると<strong>入室時に名字を决定し、参加者のユーザーIDが隠されます</strong>。誰が誰か分からない状态で人狼をプレイできます。逆になしにした場合は、ユーザーIDが公開され、あらかじめ登録した名字で参加するので、誰が誰か分かります。
   p 「GM」は、ありにすると<strong>オーナーがGMになります</strong>。GM（游戏管理员）は、加入游戏しません。ゲーム中は常に全員的职业と发言を確認でき、全員または個人個人に対してメッセージを送ることができます。
   h3 部屋を作成する
   p 其他の設定は、部屋を作った後に行います。
@@ -71,7 +71,7 @@ section.manual
   p 各設定の説明は、マウスを乗せると表示されます。また、使用する役職によって設定項目が増えたり減ったりします。
   h2 ゲームを開始する
   p
-    img(src="/images/manual-play-owner-2.png",alt="全員が[ready]をつけた状態")
+    img(src="/images/manual-play-owner-2.png",alt="全員が[ready]をつけた状态")
   p 設定が終わったらいよいよゲームを開始します。
   p 各参加者（オーナーも含む）が<b>准备/取消准备</b>ボタンを押すと、名字の下に<b>[ready]</b>というマークがつきます。このマークがつくと、その人はゲーム開始の準備ができたということです。もう一度ボタンを押すと消えます。上の画像のように部屋に入っている人全員が<b>[ready]</b>をつけると、「開始」ボタンを押してゲーム開始できます。
   p 部屋に入ったくせに<b>[ready]</b>をつけない人は、「将参加者踢出游戏」ボタンを押して部屋から踢出ことができます。
