--- a/manual/rule.jade
+++ b/manual/rule.jade
@@ -75,7 +75,7 @@ section.manual
 
   p 妖狐を殺す手段は2つあります。一つは処刑であり、もう一つは<b>呪殺</b>です。呪殺は、占卜师が妖狐を占うと妖狐が死ぬというものです。このため、妖狐がいる村では占卜师はさらに重要な役割を果たします<small>（それにも関わらず、人狼側にとっても妖狐は邪魔な存在なので、逆に人狼は占卜师を襲わなくなる傾向もあります）</small>。
   p また、呪殺は真占卜师を判断する方法になることもあります。偽の占卜师は呪殺を起こせませんから、複数いる占卜师のうち誰が呪殺したのかが確定すれば、その占卜师が真であることが確定します。
-  p 人狼が妖狐を襲った場合、妖狐は<strong>死にません</strong>（死体無し）<small>（死体無し：朝になっても誰も死んでいなかった状態。妖狐の場合と、猎人がGJした場合がある）</small>。
+  p 人狼が妖狐を襲った場合、妖狐は<strong>死にません</strong>（死体無し）<small>（死体無し：朝になっても誰も死んでいなかった状态。妖狐の場合と、猎人がGJした場合がある）</small>。
   p 妖狐になった場合、占われることも吊られる<small>(処刑される)</small>こともなく最後まで生き延びましょう。また、噛まれた<small>（人狼に襲われた）</small>場合も死なないので人狼に告発される<small>（人狼が自らCOして妖狐を指摘する）</small>可能性が生じるので避けたいところです。
   
   h2 其他
