--- a/manual/spec.jade
+++ b/manual/spec.jade
@@ -1,61 +1,64 @@
 section.manual
   p: a(href="/manual") 返回
-  h1 この人狼の仕様
-  p このページでは、ゲーム進行に関わる仕様を説明します。
+  h1 本游戏的动作详解
+  p 本页面将对与游戏进行相关的部分事项进行说明。
  
-  h2 普通人狼に関係する事項
+  h2 「普通」人狼的有关事项
 
-  h3 死体の表示順
-  p 人狼の噛みと呪殺などにより死体が2つ以上発生した場合は、その表示順は<strong>ランダム</strong>です。
+  h3 死亡的表示顺序
+  p 被人狼咬死、被咒杀致死等等情况下，如果出现了两具或以上尸体的时候，这些尸体被发现的顺序将是<strong>随机</strong>的。
   
-  h3 能力者が噛まれた場合
-  p 夜に能力を発動する役職が能力を発動した夜に噛まれた場合でも、能力は発動します。
-  p （例：占卜师が妖狐を占った夜に噛まれた場合でも呪殺は発生する）
+  h3 特殊能力者被咬的场合
+  p 能够在夜晚发动特殊能力的人，如果在发动能力的夜晚被咬了，能力会正常发动，因为所有的死亡都是在昼夜的分界线结算的（除了被GM杀死和强行退出）。
+  p （例：如果占卜师在占卜了妖狐的夜里被人狼咬了，那么妖狐将被咒杀。）
 
-  h3 猎人が护卫成功した場合に把握できるか
-  p 猎人が护卫成功した場合、猎人に対して护卫成功メッセージが表示されるかどうかは、<strong>設定可能</strong>です（デフォルトでは表示されません）。
+  h3 猎人能否知道是否护卫成功
+  p 猎人护卫成功的时候，<strong>根据房间设定</strong>只限猎人能够看到「护卫成功」的通知（默认为不显示）。
 
-  h3 占い・灵能结果が表示されるタイミング
-  p 占卜结果や灵能结果の表示されるタイミングは「翌朝」と「即時」で<strong>設定可能</strong>です（デフォルトは翌朝）。
+  h3 占卜・灵能结果的告知时间
+  p 占卜结果与灵能结果的告知时间可以在「天亮才知道」与「立刻知道」之间<strong>设定</strong>（默认为「立刻知道」）。
 
-  h3 狼的远吠・共有者的低语声が他の参加者に能听到かどうか
-  p 狼的远吠・共有者的低语声が他の参加者に能听到かどうかは、それぞれ<strong>設定可能</strong>です。デフォルトは、遠吠えは「能听到」・共有者は「听不到」です。
+  h3 狼的远吠・共有者的低语声其他参加者是否能听到
+  p 要<strong>根据房间设定</strong>来看。默认情况是狼的远吠「能听到」・共有者的低语声「听不到」。
 
-  h3 妖狐の念話が他の参加者に能听到かどうか
-  p 妖狐どうしは夜に会話可能です。これは他の参加者には聞こえません。
+  h3 妖狐的念话其他参加者是否能听到
+  p 妖狐在夜里可以进行念话，其他人是听不到的。
 
-  h3 重新投票について
-  p 処刑投票で1位が複数人になった場合は重新投票になります。4回の重新投票で決着がつかない場合は<strong>平局</strong>になります。
+  h3 关于重新投票
+  p 处刑投票的最高票获得者有复数人的时候，将进行重新投票。四次重新投票仍然不能得出结论的时候将以<strong>平局</strong>处理。
 
-  h3 突然死について
-  p 夜に対象を選択する<b>人狼</b>・<b>占卜师</b>・<b>猎人</b>（普通人狼に登場しない役職も同様）は、夜の間に対象を選択しなかった場合<strong>突然死</strong>します。人狼が対象選択を行わなかった場合、<strong>全員突然死</strong>します。
+  h3 关于「猝死」
+  p 夜里能够选择对象使用能力的<b>人狼</b>・<b>占卜师</b>・<b>猎人</b>以及其他「普通」中没有的职业，如果没有及时使用能力，则会<strong>猝死</strong>。人狼没有及时选择袭击对象的时候，将会<strong>全员猝死</strong>。
 
-  h3 夜の能力発動について
-  p 夜に全員が能力を発動しても、<strong>一定時間経過するまで夜が明けません</strong>。
+  h3 关于白天的结束
+  p 如果在白天结束之前所有人已经完成投票，将会<strong>立刻发表投票结果</strong>。根据投票结果，如果有人被处死，将会<strong>立刻进入夜晚</strong>；如果没有人被处死，将会<strong>开始重新投票</strong>，但是在白天尚未结束的时候仍然可以<strong>继续发言</strong>。
 
-  h3 初日犠牲者について
-  p 初日犠牲者の名字は<strong>替身君</strong>です。
-  p 初日犠牲者が役職を持つことがあります。また、占卜师の場合はランダムに誰かを占うので、初日犠牲者による呪殺も起こることがあります。
-  p 通常の人狼では起こりませんが、初日犠牲者が生き残った場合にはランダムに投票します。
+  h3 关于发动夜间能力
+  p 即使所有人已经发动了夜间能力，如果夜间时间尚未结束<strong>不会立刻变为天亮</strong>。
 
-  h3 狂人の能力について
-  p 狂人は、人狼的会话が<strong>聞こえません</strong>し、人狼が誰だか把握もできません。
-  p ただし、会話は听不到が人狼が誰だかわかる<b>狂信者</b>と、人狼と会話できる<b>低语狂人</b>という役職が存在します。
+  h3 关于初日牺牲者
+  p 初日牺牲者的名字是<strong>替身君</strong>。有替身君的时候，人狼第一夜不能选择袭击对象，强制袭击替身君。
+  p 替身君可能会持有职业，并会随机选择对象使用技能。例如，如果替身君是占卜师，那么替身君将随机选择对象进行占卜。替身君将妖狐咒杀的可能性也是有的。
+  p <strong>根据房间设定</strong>替身君在默认情况下不会是人狼，但是如果替身君存活的情况下，将会随机对其他人投票。
+
+  h3 关于狂人的能力
+  p 狂人是<strong>听不到</strong>人狼的会话的，也不知道<strong>谁是人狼</strong>。
+  p 但是也存在听不到人狼对话但知道谁是人狼的<b>狂信者</b>，和能够参与人狼对话的<b>低语狂人</b>这样的职业。
 
   h2 其他
 
-  h3 埋毒者・猫又について
-  p 埋毒者・猫又は両方存在します。埋毒者は蘇生能力無し、猫又は蘇生能力あり的职业として区別されます。
-  p これらは狼に噛まれた場合は人狼からランダムに一人、其他の場合は参加者全員から一人道連れにします。
+  h3 关于埋毒者・猫又
+  p 埋毒者・猫又是两个不同的职业。两者的区别在于埋毒者没有复活能力，猫又有复活能力。
+  p 这两种职业在被人狼袭击死亡的时候将会随机连坐一名人狼，在其他情况下死亡将会随机连坐全场生存者中的一人，被连坐的人将一同死去。
 
-  h3 丘比特の自分刺しについて
-  p 少人数であっても、丘比特は自分刺しをする必要はありません。
+  h3 关于丘比特向自己射箭
+  p 虽然丘比特可以向自己射箭，但是即使在人数很少的情况下，也没有向自己射箭的必要。
 
-  h3 恋人について
-  p 恋人は、互い的职业を把握できませんし、夜の会話もできません。
-  p 恋人の胜利条件は、「终了时生存」と「终了時に恋人のみ生存」から選択可能です。
-  p また、恋人が2組以上作られた場合の動作は、独立するかどうかは<strong>設定可能</strong>です。独立する場合は自分の相手のみ把握でき、その人が死ぬと後追いします。独立しない場合は恋人たちは全員互いに把握でき、一人が死ぬと全員後追いします。 
+  h3 关于恋人
+  p 恋人不能把握对方的职业，恋人之间不能够在夜间进行对话。
+  p 恋人的胜利条件可以从「终了时生存」与「只有恋人彼此生存」之间选择。
+  p 此外，在有两组以上恋人的时候<strong>根据房间设定</strong>来决定各组恋人之间是否相互独立。「独立」的场合下恋人的一方只能够知道自己的恋人是谁，那个人死后自己将会殉情。「不独立」的场合下，所有恋人能够知道所有恋人是谁，其中一人死去，将会全员殉情。 
 
-  h3 被诅咒者について
-  p 前日の夜に被诅咒者が噛まれた状態で昼に最後の人狼が処刑された場合、被诅咒者が変化する前に胜利判定が入ります。
-  p 妖狐などがいなかった場合は村人胜利になります。被诅咒者はそのときまだ変化していないので、被诅咒者もいっしょに胜利します。
+  h3 关于被诅咒者
+  p 前一天夜里被诅咒者如果被人狼咬了，并且当天白天<strong>最后的人狼</strong>被处刑死亡的场合下，被诅咒者变为人狼前，将先进行胜利判定。
+  p 没有妖狐的时候，村人获得胜利。被诅咒者因为在此时尚未变为人狼，将会一同获胜。
