--- a/manual/welcome.jade
+++ b/manual/welcome.jade
@@ -11,7 +11,7 @@ section.manual.long
     p その後は、能力者の<b>CO</b>（カミングアウト：自分的职业を公表すること）があることが多いです。それをもとに参加者たちは推理を始めます。そして、最終的に昼が終わるときに投票をします。
     p その後夜になると、能力者の場合は能力を発動しますが、他の人はやることがありません。夜にもやはり推理をしましょう。昼の間に行われたみんなの发言を推理材料にするとよいでしょう。
     p 次の昼になると、<strong>朝の死体</strong>が発見されます。これは、夜に人狼に襲われた人です。基本的に朝の死体は1つですが、場合によっては死体がなかったり、2つだったりします。
-    p このように人狼に襲われたり処刑されたりした人はそれ以降加入游戏できません。見ているだけになります。死んだ後は、既に死んだ人同士で会話することができます。これはまだ生きている人には届きません。死んだ後の状態は<b>灵界</b>と呼ばれます。
+    p このように人狼に襲われたり処刑されたりした人はそれ以降加入游戏できません。見ているだけになります。死んだ後は、既に死んだ人同士で会話することができます。これはまだ生きている人には届きません。死んだ後の状态は<b>灵界</b>と呼ばれます。
     p 人狼においては、自分が人狼ではないのに人狼ではないかと疑われることもあります。あまり感情的にならないようにしましょう。
     p また、占卜师（後述）が自分を人狼でないのに人狼であると言ってくる場合があります。その場合もその人が偽者であるだけです。あせらずに、推理材料が増えたと喜びましょう。
 
@@ -23,7 +23,7 @@ section.manual.long
     h2 村人阵营
     p 村人阵营の目的は、<strong>人狼</strong>を全滅させ、さらに<b>妖狐</b>がいる場合には妖狐も全滅させることです。
     p ただし、妖狐が生き残っているうちから人狼が全滅してしまうと妖狐が胜利してしまうので、妖狐がいる場合は人狼が全滅するよりも先に妖狐を全滅させる必要があります。
-    p そのため、人狼が<b>LW</b>（Last Wolf: 人狼が一人しか生き残っていない状態、またはその残った人狼のこと）であることが分かっている場合は、ギリギリまでそのLWを吊らずに残したりします。
+    p そのため、人狼が<b>LW</b>（Last Wolf: 人狼が一人しか生き残っていない状态、またはその残った人狼のこと）であることが分かっている場合は、ギリギリまでそのLWを吊らずに残したりします。
     p 注意すべきことは、村人侧の場合基本的に嘘はつきません。嘘をついても村人は得をしないからです。例外もあることにはありますが、村人侧ならば嘘はつかないようにしましょう。
     section
       h3 村人
@@ -199,7 +199,7 @@ section.manual.long
         dt ローラー
         dd ある役職をCOした人を順番に全員処刑すること。「占いローラー」や「灵能ローラー」といって使う。本物を犠牲にして、人外を確実に排除できるという利点がある。
         dt 2-1,2-2など
-        dd 「2-1」という場合、「占卜师が2人、灵能者が1人COした状態」を指す。「2-2」の場合、占卜师が2人、灵能者も2人。
+        dd 「2-1」という場合、「占卜师が2人、灵能者が1人COした状态」を指す。「2-2」の場合、占卜师が2人、灵能者も2人。
         dt 「真狂-真」など
         dd 占卜师・灵能者の内訳を書く方法。「真狂-真」は、「占卜师2人のうちどちらかが真占卜师でどちらかが狂人。1人いる灵能者は真灵能」という意味である。
         dd 例えば「真狼-真狂」ならば「占卜师2人のうちどちらかが真占いでどちらかが人狼。灵能者2人のうちどちらかが真灵能でどちらかが狂人」という意味になる。
@@ -213,6 +213,6 @@ section.manual.long
         dd 初日犠牲者。一日目の夜に人狼に襲われる人。この人狼では「替身君」というNPCである。
     section
       h3 初日犠牲者について
-      p 一般に、占卜师や灵能者が複数COした場合、その中に真がいるとみなすのが普通です。しかし、替身君に何か的职业が割り当てられた場合、そ的职业は2日目の時点で既にいないことになります。このような状態を<strong>欠け</strong>といいます。例えば「占い欠け」ならば替身君が占卜师になった状態のことです。
-      p こうなると、例えば「2-1」で「真狂-狼」とか、そういう状態になります。ですから、占いや灵能をCOする人が1人しかいない場合でも確実にその人が真とは限りません。この点に気をつけて推理しましょう。
+      p 一般に、占卜师や灵能者が複数COした場合、その中に真がいるとみなすのが普通です。しかし、替身君に何か的职业が割り当てられた場合、そ的职业は2日目の時点で既にいないことになります。このような状态を<strong>欠け</strong>といいます。例えば「占い欠け」ならば替身君が占卜师になった状态のことです。
+      p こうなると、例えば「2-1」で「真狂-狼」とか、そういう状态になります。ですから、占いや灵能をCOする人が1人しかいない場合でも確実にその人が真とは限りません。この点に気をつけて推理しましょう。
   p: a(href="welcome2") 続き
