--- a/manual/welcome2.jade
+++ b/manual/welcome2.jade
@@ -25,8 +25,8 @@ section.manual.long
 
     section
       h3 白進行
-      p <strong>白進行</strong>とは、黒進行とは逆に、占卜师が誰も黒を出さず、<b>白</b>（村人判定）しか出していない状態です。
-      p この状態では特に、誰が人狼である可能性が高いということもないので、CO数を見て<strong>グレラン</strong>や<strong>灵能ローラー</strong>（詳しくは後述）が行われることが多いです。
+      p <strong>白進行</strong>とは、黒進行とは逆に、占卜师が誰も黒を出さず、<b>白</b>（村人判定）しか出していない状态です。
+      p この状态では特に、誰が人狼である可能性が高いということもないので、CO数を見て<strong>グレラン</strong>や<strong>灵能ローラー</strong>（詳しくは後述）が行われることが多いです。
       p 白進行であるということは、占卜师が全員COしきってしまったけど黒が出ないということですから、だいたいは占卜师は全て2日目昼にCOしてしまいます。人狼に狙われるのを防ぐためにあえて占卜师が潜伏するという戦術もないとは言えませんが、グレランで吊られる可能性があるなどリスクもあります。
       p 灵能者についても、グレランで吊られないためにCOしてしまう場合があります。
       p 基本的に白進行ならば、対抗（自分と同じ役職を名乗る人）が出たら自分もCOしてしまって問題ないでしょう。
