--- a/client/templates/jobs/Cursed.jade
+++ b/client/templates/jobs/Cursed.jade
@@ -2,8 +2,8 @@ section.jobmanual
   h1 被诅咒者
   p 「究极人狼」的职业。被诅咒的村人。最初属于村人阵营。
   h2 特殊能力
-  p 被人狼袭击之后，第二天晚上回变成人狼。变成人狼之后，和普通的人狼一样可以相互会话，决定袭击目标。
+  p 被人狼袭击之后，第二天入夜之后将会变成人狼。变成人狼之后，和普通的人狼一样可以相互会话，决定袭击目标。
   p 同样的，被吸血鬼袭击之后会变成吸血鬼。
   h2 胜利条件
-  p 被袭击之前是村人阵营的胜利。被袭击之后变为新阵营的胜利条件。
+  p 被袭击并变化之前是村人阵营的胜利。被袭击并变化之后变为新阵营的胜利条件。
 
