--- a/manual/play-other.jade
+++ b/manual/play-other.jade
@@ -4,7 +4,7 @@ section.manual
   p 既にある部屋に参加する手順を説明します。
 
   h2 部屋を探す
-  p <a href="/rooms">房间一览</a>に、現在たっている部屋の一览が表示されています。状態が「募集中」の部屋が、これから参加できる部屋です。
+  p <a href="/rooms">房间一览</a>に、現在たっている部屋の一览が表示されています。状态が「募集中」の部屋が、これから参加できる部屋です。
   p <img src="/images/lock.png" alt="鍵">鍵のマークがついている部屋は房间加密の部屋で、入るときに密码を入力する必要があります。<strong>房间加密の部屋でも、终了した後は全員に公開されます。</strong>
   p <img src="/images/blind.png" alt="匿名模式">このマークがついている部屋は<b>匿名模式</b>の部屋です。ふつうの部屋では、登録時に設定したユーザーIDと、設定したユーザー名を使って部屋に参加します。それに対し匿名模式の部屋では、その場で名字を決めてユーザーIDも分からないので、互いに誰か分かりません。
   p <img src="/images/gm.png" alt="GM">このマークがついている部屋は有GMの部屋です。GMは、加入游戏せずに動向を見守る人です。
